=======
CHANGES
=======

1.4.2 (unreleased)
------------------

- ...


1.4.1 (2011-11-15)
------------------

- bugfix, missing comma in setup install_requires list 


1.4.0 (2011-10-29)
------------------

- Moved z3c.pt include to extras_require chameleon. This makes the package
  independent from chameleon and friends and allows to include this
  dependencies in your own project.

- Upgrade to chameleon 2.0 template engine and use the newest z3c.pt and
  z3c.ptcompat packages adjusted to work with chameleon 2.0.
  
  See the notes from the z3c.ptcompat package:

  Update z3c.ptcompat implementation to use component-based template engine
  configuration, plugging directly into the Zope Toolkit framework.

  The z3c.ptcompat package no longer provides template classes, or ZCML
  directives; you should import directly from the ZTK codebase.

  Note that the ``PREFER_Z3C_PT`` environment option has been
  rendered obsolete; instead, this is now managed via component
  configuration.
  
  Also note that the chameleon CHAMELEON_CACHE environment value changed from
  True/False to a path. Skip this property if you don't like to use a cache.
  None or False defined in buildout environment section doesn't work. At least
  with chameleon <= 2.5.4
  
  Attention: You need to include the configure.zcml file from z3c.ptcompat
  for enable the z3c.pt template engine. The configure.zcml will plugin the 
  template engine. Also remove any custom built hooks which will import
  z3c.ptcompat in your tests or other places.


1.3.0 (2010-07-05)
------------------

- Tests now require ``zope.browserpage >= 3.12`` instead of
  ``zope.app.pagetemplate`` as the expression type registration has
  been moved there recently.

- No longer using deprecated ``zope.testing.doctestunit`` but built-in
  ``doctest`` instead.


1.2.1 (2009-03-07)
------------------

- Presence of ``z3c.pt`` is not sufficient to register macro-utility,